Add feature on manager console: Add new workers. Edit messages so that they are all in english. Delete all comments